--- a/css/styles.css
+++ b/css/styles.css
@@ -1,12 +1,16 @@
-@import url('https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,300..800;1,300..800&display=swap');
-@import url('https://fonts.googleapis.com/css2?family=Barlow:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap');
-
 :root {
-    --color-primary: #835bfc;
-    --color-primary-light: #f1ecfe;
-    --color-primary-bg: #835bfc;
-    --color-secondary: #000000;
-    --color-tertiary: #FFFFFF;
+    --color-primary: #1C3430;
+    --color-secondary: #B78C25;
+    --color-black: #000000;
+    --color-white: #FFFFFF;
+    --color-grey: #f0edf1;
+}
+
+@font-face {
+    font-family: 'San Francisco';
+    src: url('../assets/fonts/SF.otf') format('opentype');
+    font-weight: normal;
+    font-style: normal;
 }
 
 /*
@@ -22,7 +26,7 @@
     2. Remove default margin
   */
 * {
-    font-family: "Barlow", sans-serif;
+    font-family: 'San Francisco', sans-serif;
     margin: 0;
 }
 
@@ -84,7 +88,7 @@ a {
 }
 
 .header {
-    /* background-color: var(--color-primary-light); */
+    background-color: var(--color-primary);
     box-shadow: rgba(149, 157, 165, 0.2) 0px 8px 24px;
 }
 
@@ -95,133 +99,169 @@ a {
     justify-content: space-between;
 }
 
-.header-left {
+.header-container__left {
     display: flex;
     gap: 5px;
     align-items: center;
 }
 
-.header-logo {
+.header__logo {
     width: 24px;
     height: 24px;
 }
 
-.header-logo-text {
-    color: var(--color-primary);
+.header__logo-text {
+    color: var(--color-white);
 }
 
-.header-right {
+.header-container__right {
     display: flex;
 }
 
-.nav-menu {
+.header__nav-list {
     padding: 0;
     display: flex;
     list-style: none;
     align-items: center;
+    position: relative;
 }
 
-.nav-item {
+.header__nav-item {
     padding: 24px 12px;
+    display: flex;
+    gap: 5px;
 }
 
-.nav-link {
-    color: var(--color-secondary);
+.header__nav-link {
+    color: var(--color-white);
     font-size: 1rem;
     font-weight: 600;
+    transition: 0.2s ease-in-out;
 }
 
-.nav-link:hover,
-.nav-link:hover>.chevron {
-    color: var(--color-primary);
+.header__nav-link:hover {
+    color: var(--color-secondary);
+    transition: 0.2s ease-in-out;
+    cursor: pointer;
 }
 
 .chevron {
-    display: inline-flex;
-    transition: 0.3s ease-in-out;
-    cursor: pointer
+    width: 16px;
+    transition: 0.2s ease-in-out;
+}
+
+.chevron:hover {
+    cursor: pointer;
 }
 
 .chevron.rotate {
     transform: rotate(180deg);
-    transition: 0.3s ease-in-out;
+    transition: 0.2s ease-in-out;
 }
 
-.nav-item-dropdown {
-    display: block;
-    max-height: 0;
-    opacity: 0;
-    overflow: hidden;
+.header__nav-dropdown {
+    border-radius: 10px;
+    display: none;
     list-style: none;
     padding: 0;
     position: absolute;
-    background-color: var(--color-tertiary);
-    border: 1px solid black;
-    top: 60px;
-    width: 200px;
-    transition: max-height 0.3s ease-in-out, opacity 0.3s ease-in-out;
+    background-color: var(--color-grey);
+    box-shadow: rgba(100, 100, 111, 0.2) 0px 0px 29px 0px;
+    top: 70px;
+    left: 60px;
 }
 
-.nav-item-dropdown.show {
-    max-height: 500px;
-    opacity: 1;
+.header__nav-dropdown::before {
+    content: '';
+    position: absolute;
+    bottom: 100%;
+    left: 20px;
+    border-width: 10px;
+    border-style: solid;
+    border-color: transparent transparent var(--color-grey) transparent;
 }
 
-.nav-item-dropdown>.nav-item {
-    padding: 10px;
+.header__nav-dropdown.show {
+    display: block;
+}
+
+.header__nav-dropdown>.header__nav-item {
+    padding: 12px 20px;
+}
+
+.header__nav-dropdown>.header__nav-item>.header__nav-link {
+    color: var(--color-black);
+}
+
+.header__nav-dropdown>.header__nav-item>.header__nav-link:hover {
+    color: var(--color-secondary);
+}
+
+.banner {
+    background-color: var(--color-primary);
 }
 
 .banner-container {
-    background-color: var(--color-primary);
-    /* background-image: linear-gradient(to right, var(--color-primary-bg), var(--color-primary)); */
-    height: 400px;
-    margin-bottom: 40px;
-}
-
-.banner-content {
     max-width: 1248px;
     margin: 0 auto;
+    padding: 40px 0;
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+}
+
+.banner-container__left {
     display: flex;
     flex-direction: column;
+    gap: 1rem;
     justify-content: center;
-    height: 100%;
-    gap: 20px;
 }
 
-.banner-title {
+.banner-container__right {
+    display: flex;
+    justify-content: end;
+}
+
+.banner__title {
     font-size: 2.5rem;
-    max-width: 600px;
     line-height: 1.2;
-    color: var(--color-tertiary);
+    color: var(--color-white);
 }
 
-.banner-desc {
-    color: var(--color-tertiary);
+.banner__desc {
+    color: var(--color-white);
     font-size: 1.25rem;
     font-weight: 500;
 }
 
-.banner-btn {
+.banner__btn {
     font-weight: 700;
     font-size: 1.25rem;
     padding: 12px 24px;
     cursor: pointer;
-    background-color: var(--color-tertiary);
-    color: var(--color-primary);
+    background-color: var(--color-secondary);
+    color: var(--color-white);
     width: fit-content;
     border-radius: 6px;
     transition: 0.3s ease-in-out;
 }
 
-.banner-btn:hover {
-    /* opacity: 0.8; */
+.banner__btn:hover {
     transform: scale(1.05);
     transition: 0.3s ease-in-out;
 }
 
+.banner__img {
+    height: 300px;
+}
+
 .content-block {
-    margin-bottom: 40px;
+    padding: 60px 0;
     min-height: 200px;
+}
+
+.grey-bg {
+    background-color: var(--color-grey);
 }
 
 .content-block-container {
@@ -230,45 +270,86 @@ a {
     min-height: 200px;
 }
 
-.flex-container {
+.teaser {
     display: flex;
-    box-shadow: rgba(149, 157, 165, 0.2) 0px 8px 24px;
+    border-radius: 20px;
 }
 
-.content-block-left {
-    flex: 1 1 50%;
-    background-color: var(--color-secondary);
+.content-block__left {
+    flex: 1 1 40%;
+    overflow: hidden;
+    border-radius: 20px;
+
 }
 
-.content-block-right {
-    flex: 1 1 50%;
-    background-color: var(--color-primary-light);
+.content-block__right {
+    flex: 1 1 60%;
+    padding: 50px;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
 }
 
-.purple-bg {
-    background-color: var(--color-primary-light);
+.teaser__img {
+    transition: 0.3s ease-in-out;
 }
 
-
-.content-block-title,
-.content-block-desc {
-    color: (var(--color-secondary));
-    text-align: center;
+.teaser__img:hover {
+    transform: scale(1.2);
+    transition: 0.3s ease-in-out;
 }
 
-.content-block-title {
+.teaser__title {
+    font-weight: 700;
     font-size: 2.5rem;
 }
 
-.content-block-desc {
+.teaser__desc {
     font-size: 1.25rem;
     margin-bottom: 20px;
+}
+
+.teaser__btn-text {
+    font-weight: 500;
+    font-size: 1.25rem;
+    color: var(--color-black);
+    transition: 0.2s ease-in-out;
+}
+
+.teaser__btn-icon {
+    width: 24px;
+}
+
+.teaser__btn:hover {
+    cursor: pointer;
+}
+
+.teaser__btn:hover>.teaser__btn-text {
+    opacity: 0.6;
+    margin-right: 8px;
+    transition: 0.2s ease-in-out;
+}
+
+.content-block__title,
+.content-block__desc {
+    color: (var(--color-black));
+    text-align: center;
+}
+
+.content-block__title {
+    font-size: 3rem;
+}
+
+.content-block__desc {
+    font-size: 1.25rem;
+    margin-bottom: 40px;
 }
 
 .cards {
     display: flex;
     justify-content: center;
     gap: 24px;
+    flex-wrap: wrap;
 }
 
 .card {
@@ -278,52 +359,233 @@ a {
 }
 
 .card-container {
-    background-color: var(--color-primary-light);
-    flex: 1 1 33%;
-    box-shadow: rgba(149, 157, 165, 0.2) 0px 8px 24px;
+    background-color: var(--color-grey);
+    flex-basis: calc(33% - 24px);
     padding: 30px;
     border-radius: 12px;
+    flex-wrap: wrap;
 }
 
-.card-icon {
+.card-container.alternate {
+    background-color: var(--color-white);
+    flex-basis: calc(25% - 24px);
+    padding: 20px;
+}
+
+.card__header {
+    display: flex;
+    justify-content: space-between;
+}
+
+.card__icon {
     height: 64px;
     width: 64px;
 }
 
-.card-title {
-    color: var(--color-primary);
+.card-container.alternate .card__icon {
+    height: 24px;
+    width: 24px;
+    margin: auto 0;
+}
+
+.card__title {
     font-size: 1.75rem;
 }
 
-.card-desc {
+.card-container.alternate .card__title {
+    font-size: 1.5rem;
+}
+
+.card__desc {
     font-weight: 400;
     font-size: 1.25rem;
 }
 
-.card-link {
-    font-weight: 500;
-    font-size: 1.25rem;
-    color: var(--color-primary);
-    position: relative;
+.card-container.alternate .card__desc {
+    font-size: 1rem;
 }
 
-.card-link::after {
-    content: "";
-    display: inline-block;
-    width: 20px;
-    height: 20px;
-    background: url("../assets/icons/arrow-right.svg") no-repeat center center;
-    background-size: contain;
-    vertical-align: middle;
-    margin-left: 5px;
+.card-link,
+.teaser__btn {
+    display: flex;
+}
+
+.card-link-text {
+    font-weight: 500;
+    font-size: 1.25rem;
+    transition: 0.2s ease-in-out;
+}
+
+.card-link-icon {
+    width: 24px;
 }
 
 .card-link:hover {
     cursor: pointer;
-    opacity: 0.75;
+}
+
+.card-link:hover>.card-link-text {
+    opacity: 0.6;
+    margin-right: 8px;
+    transition: 0.2s ease-in-out;
+}
+
+.feature-list {
+    display: flex;
+    /* margin-bottom: 80px; */
+}
+
+.feature-list .content-block-left {
+    flex: 1 1 35%;
+    background-color: var(--color-primary);
+    border-top-left-radius: 20px;
+}
+
+.feature-list .content-block-right {
+    flex: 1 1 65%;
+    padding-left: 120px;
+}
+
+.image-left {
+    position: relative;
+    top: 80px;
+    left: 80px;
+    border-top-left-radius: 20px;
+}
+
+.feature-list__title {
+    font-size: 3rem;
+}
+
+.feature-list__list {
+    margin-top: 30px;
+    display: flex;
+    flex-direction: column;
+    gap: 20px;
+}
+
+.feature-list__item {
+    display: flex;
+    gap: 1.5rem;
+}
+
+.feature-list__item-number {
+    color: var(--color-white);
+    font-size: 2rem;
+    font-weight: 700;
+    background-color: var(--color-primary);
+    width: 48px;
+    height: 48px;
+    border-radius: 50%;
+    display: flex;
+    justify-content: center;
+    flex-shrink: 0;
+}
+
+.feature-list__item-title {
+    font-size: 1.5rem;
+    margin-bottom: 10px;
+}
+
+.feature-list__item-desc {
+    font-size: 1.25rem;
 }
 
 .footer {
-    background-color: var(--color-primary-light);
-    height: 300px;
+    background-color: var(--color-primary);
+}
+
+.footer-container {
+    max-width: 1248px;
+    margin: 0 auto;
+    padding: 60px 0;
+    display: flex;
+    flex-direction: column;
+}
+
+.footer__top {
+    display: flex;
+    border-bottom: 1px solid var(--color-white);
+    padding-bottom: 60px;
+}
+
+.footer__top-left {
+    flex: 1 1 25%;
+    display: flex;
+    flex-direction: row;
+}
+
+.footer__top-right {
+    flex: 1 1 75%;
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+}
+
+.footer__logo {
+    width: 24px;
+    height: 24px;
+}
+
+.footer__logo-text {
+    color: var(--color-white);
+}
+
+.footer__column {
+    width: 25%;
+    display: flex;
+    flex-direction: column;
+    gap: 0.5rem;
+}
+
+.footer__column-title {
+    width: fit-content;
+    color: var(--color-white);
+    font-size: 1.25rem;
+    font-weight: 700;
+}
+
+.footer__column-item {
+    width: fit-content;
+    color: var(--color-white);
+    font-size: 1rem;
+    font-weight: 500;
+}
+
+.footer__column-item:hover,
+.footer__column-title:hover {
+    color: var(--color-secondary);
+    cursor: pointer;
+}
+
+.footer__icons {
+    margin-top: 60px;
+    margin-bottom: 20px;
+    display: flex;
+    justify-content: center;
+    gap: 10px;
+}
+
+.footer__icon-container {
+    border: 2px solid var(--color-white);
+    border-radius: 50%;
+    padding: 8px;
+    transition: 0.2s ease-in-out;
+}
+
+.footer__icon-container:hover {
+    transform: scale(1.1);
+    transition: 0.2s ease-in-out;
+    border: 2px solid var(--color-secondary);
+}
+
+.footer__icon {
+    height: 20px;
+    width: 20px;
+}
+
+.footer__text {
+    text-align: center;
+    color: var(--color-white);
+    font-size: 1rem;
 }
