--- a/css/styles.css
+++ b/css/styles.css
@@ -97,6 +97,10 @@ a {
     text-decoration: none;
 }
 
+.hide-scroll {
+    overflow: hidden;
+}
+
 .header {
     background-color: var(--color-primary);
     box-shadow: rgba(149, 157, 165, 0.2) 0px 8px 24px;
@@ -111,21 +115,67 @@ a {
 
 .header-container__left {
     display: flex;
-    gap: 5px;
     align-items: center;
 }
 
 .header__logo {
-    width: 24px;
-    height: 24px;
+    width: 40px;
+    height: 40px;
 }
 
 .header__logo-text {
     color: var(--color-white);
+    font-size: 1.75rem;
+    font-weight: 500;
+    font-weight: bold;
 }
 
 .header-container__right {
     display: flex;
+}
+
+.header__nav-mobile {
+    display: none;
+}
+
+.header__hamburger-menu {
+    height: 50px;
+    width: 50px;
+    position: relative;
+}
+
+.header__hamburger-menu span {
+    height: 3px;
+    width: 100%;
+    background-color: var(--color-white);
+    border-radius: 25px;
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    transition: 0.3s ease-in-out;
+}
+
+.header__hamburger-menu span:nth-child(1) {
+    top: 25%;
+}
+
+.header__hamburger-menu span:nth-child(3) {
+    top: 75%;
+}
+
+.header__hamburger-menu.active span:nth-child(1) {
+    top: 50%;
+    transform: translate(-50%, -50%) rotate(45deg);
+}
+
+.header__hamburger-menu.active span:nth-child(2) {
+    opacity: 0;
+}
+
+.header__hamburger-menu.active span:nth-child(3) {
+    top: 50%;
+    transform: translate(-50%, -50%) rotate(-45deg);
 }
 
 .header__nav-list {
@@ -144,7 +194,7 @@ a {
 
 .header__nav-link {
     color: var(--color-white);
-    font-size: 1rem;
+    font-size: 1.25rem;
     font-weight: 600;
     transition: 0.2s ease-in-out;
 }
@@ -171,14 +221,14 @@ a {
 
 .header__nav-dropdown {
     border-radius: 10px;
-    opacity: 0;
+    display: none;
     list-style: none;
     padding: 0;
     position: absolute;
     background-color: var(--color-grey);
     box-shadow: rgba(100, 100, 111, 0.2) 0px 0px 29px 0px;
     top: 70px;
-    left: 60px;
+    left: 85px;
     transition: 0.2s ease-in-out;
 }
 
@@ -193,7 +243,7 @@ a {
 }
 
 .header__nav-dropdown.show {
-    opacity: 1;
+    display: block;
     transition: 0.2s ease-in-out;
 }
 
@@ -203,10 +253,84 @@ a {
 
 .header__nav-dropdown>.header__nav-item>.header__nav-link {
     color: var(--color-black);
+    font-size: 1rem;
 }
 
 .header__nav-dropdown>.header__nav-item>.header__nav-link:hover {
     color: var(--color-secondary);
+}
+
+.header__nav-mobile-menu {
+    background: var(--color-primary);
+    height: 100vh;
+    width: 100%;
+    position: fixed;
+    top: 74px;
+    right: -576px;
+    transition: 0.3s ease-in-out;
+    padding: 0 24px;
+    z-index: 9999;
+}
+
+.header__nav-mobile-menu.active {
+    right: 0;
+}
+
+.header__accordion-item {
+    display: flex;
+    flex-direction: column;
+    margin: 10px 0;
+}
+
+.header__accordion-title {
+    width: fit-content;
+    color: var(--color-white);
+    font-size: 1.5rem;
+    font-weight: 700;
+}
+
+.header__accordion-content {
+    display: grid;
+    grid-template-rows: 0fr;
+    transition: grid-template-rows 0.5s;
+    transition: 0.5s ease-in-out;
+}
+
+.header__accordion-content.show {
+    grid-template-rows: 1fr;
+    margin: 10px 0;
+    transition: 0.5s ease-in-out;
+}
+
+.header__accordion-content>div {
+    overflow: hidden;
+    display: flex;
+    flex-direction: column;
+    gap: 0.5rem;
+}
+
+.header__accordion-content.show {
+    grid-template-rows: 1fr;
+    margin: 10px 0;
+    transition: 0.5s ease-in-out;
+}
+
+.header__accordion-content-title {
+    color: var(--color-white);
+    font-size: 1.25rem;
+    font-weight: 500;
+}
+
+.header__accordion-chevron {
+    width: 32px;
+    position: absolute;
+    right: 24px;
+    transition: 0.2s ease-in-out;
+}
+
+.header__accordion-chevron.rotate {
+    transform: rotate(180deg);
+    transition: 0.2s ease-in-out;
 }
 
 .banner {
@@ -294,19 +418,25 @@ a {
 
 .content-block__right {
     flex: 1 1 60%;
-    padding: 50px;
     display: flex;
     flex-direction: column;
-    justify-content: space-between;
+    justify-content: center;
+    padding-left: 50px;
 }
 
-.teaser__img {
+.teaser__img,
+.teaser__img-tab {
     transition: 0.3s ease-in-out;
 }
 
-.teaser__img:hover {
+.teaser__img:hover,
+.teaser__img-tab:hover {
     transform: scale(1.2);
     transition: 0.3s ease-in-out;
+}
+
+.teaser__img-tab {
+    display: none;
 }
 
 .teaser__title {
@@ -316,7 +446,7 @@ a {
 
 .teaser__desc {
     font-size: 1.25rem;
-    margin-bottom: 20px;
+    margin: 10px 0 20px;
 }
 
 .teaser__btn-text {
@@ -348,11 +478,12 @@ a {
 
 .content-block__title {
     font-size: 3rem;
+    line-height: 1.25;
 }
 
 .content-block__desc {
     font-size: 1.25rem;
-    margin-bottom: 40px;
+    margin: 20px 0 0;
 }
 
 .cards {
@@ -360,6 +491,7 @@ a {
     justify-content: center;
     gap: 24px;
     flex-wrap: wrap;
+    margin-top: 40px;
 }
 
 .card {
@@ -374,7 +506,7 @@ a {
     padding: 30px;
     border-radius: 12px;
     flex-wrap: wrap;
-    box-shadow: 0 4px 40px rgba(34,59,149,.08);
+    box-shadow: 0 4px 40px rgba(34, 59, 149, .08);
 }
 
 .card-container.alternate {
@@ -419,6 +551,7 @@ a {
 .card-link,
 .teaser__btn {
     display: flex;
+    width: fit-content;
 }
 
 .card-link-text {
@@ -444,7 +577,6 @@ a {
 
 .feature-list {
     display: flex;
-    /* margin-bottom: 80px; */
 }
 
 .feature-list .content-block-left {
@@ -458,15 +590,21 @@ a {
     padding-left: 120px;
 }
 
-.image-left {
+.feature-list-image-left,
+.feature-list-image-left-tab {
     position: relative;
     top: 80px;
     left: 80px;
     border-top-left-radius: 20px;
 }
 
+.feature-list-image-left-tab {
+    display: none;
+}
+
 .feature-list__title {
     font-size: 3rem;
+    line-height: 1.25;
 }
 
 .feature-list__list {
@@ -535,39 +673,60 @@ a {
 }
 
 .footer__logo {
-    width: 24px;
-    height: 24px;
+    width: 48px;
+    height: 48px;
 }
 
 .footer__logo-text {
     color: var(--color-white);
+    font-size: 2rem;
+    font-weight: 500;
+    font-weight: bold;
 }
 
-.footer__column {
-    width: 25%;
+.footer__accordion-item {
+    width: 33%;
     display: flex;
     flex-direction: column;
     gap: 0.5rem;
 }
 
-.footer__column-title {
+.footer__accordion-title {
+    width: fit-content;
+    color: var(--color-white);
+    font-size: 1.5rem;
+    font-weight: 700;
+    transition: 0.2s ease-in-out;
+}
+
+.footer__accordion-content>div {
+    overflow: hidden;
+    display: flex;
+    flex-direction: column;
+    gap: 0.5rem;
+}
+
+.footer__accordion-content-title {
     width: fit-content;
     color: var(--color-white);
     font-size: 1.25rem;
-    font-weight: 700;
-}
-
-.footer__column-item {
-    width: fit-content;
-    color: var(--color-white);
-    font-size: 1rem;
     font-weight: 500;
+    transition: 0.2s ease-in-out;
 }
 
-.footer__column-item:hover,
-.footer__column-title:hover {
+.footer__accordion-content-title:hover,
+.footer__accordion-title:hover {
     color: var(--color-secondary);
     cursor: pointer;
+    transition: 0.2s ease-in-out;
+}
+
+.footer__accordion-chevron {
+    display: none;
+    width: 32px;
+    position: absolute;
+    right: 18px;
+    transition: 0.2s ease-in-out;
 }
 
 .footer__icons {
@@ -605,11 +764,10 @@ a {
 .calculator-container {
     /* border: 2px solid var(--color-grey); */
     border-radius: 20px;
-    min-height: 300px;
     display: flex;
     flex-direction: row;
     margin-top: 20px;
-    box-shadow: 0 4px 40px rgba(34,59,149,.08);
+    box-shadow: 0 4px 40px rgba(34, 59, 149, .08);
 }
 
 .calculator {
@@ -904,3 +1062,256 @@ a {
     transition: 0.2s ease-in-out;
     cursor: pointer;
 } */
+
+@media (max-width : 1248px) {
+
+    .header-container,
+    .banner-container,
+    .content-block-container,
+    .calculators,
+    .footer-container {
+        margin: 0 48px;
+    }
+
+    .card-container.alternate {
+        flex-basis: calc(33% - 24px);
+    }
+
+    .feature-list__title {
+        font-size: 2.5rem;
+    }
+
+    .calculator-container {
+        flex-direction: column;
+        gap: 2rem;
+        padding: 60px;
+    }
+
+    .calculator {
+        width: 100%;
+        padding: 0;
+    }
+
+    .calculator-right {
+        width: 100%;
+        padding: 0;
+    }
+
+    .calculator__donut-chart-container {
+        max-width: 100%;
+    }
+}
+
+@media (max-width: 976px) {
+    .teaser__img {
+        display: none;
+    }
+
+    .teaser__img-tab {
+        display: block;
+    }
+
+    .card-container.alternate {
+        flex-basis: calc(50% - 24px);
+    }
+
+    .feature-list {
+        flex-direction: column;
+    }
+
+    .feature-list .content-block-left {
+        flex: 1 1 100%;
+        margin-right: 80px;
+    }
+
+    .feature-list-image-left {
+        display: none;
+    }
+
+    .feature-list-image-left-tab {
+        display: block;
+    }
+
+    .feature-list .content-block-right {
+        padding-left: 0;
+        padding-top: 120px;
+    }
+
+    .feature-list__title {
+        font-size: 3rem;
+        text-align: center;
+    }
+
+    #calculators {
+        padding-top: 20px;
+    }
+
+    .card-container {
+        flex-basis: calc(50% - 24px);
+    }
+}
+
+@media (max-width : 576px) {
+
+    .banner-container,
+    .content-block-container,
+    .calculators {
+        margin: 0 24px;
+    }
+
+    .header-container {
+        margin: 0;
+        padding: 12px 24px;
+    }
+
+    .footer-container {
+        margin: 0;
+        padding: 0;
+    }
+
+    .header__nav {
+        display: none;
+    }
+
+    .header__nav-mobile {
+        display: block;
+    }
+
+    .content-block {
+        padding: 40px 0;
+    }
+
+    .content-block__title,
+    .feature-list__title {
+        font-size: 2.5rem;
+    }
+
+    .content-block__desc {
+        font-size: 1.25rem;
+        margin: 10px 0 0;
+    }
+
+    .cards {
+        margin-top: 20px;
+    }
+
+    .banner-container__right {
+        display: none;
+    }
+
+    .teaser {
+        flex-direction: column;
+        gap: 1rem;
+    }
+
+    .teaser__img {
+        display: block;
+    }
+
+    .teaser__img-tab {
+        display: none;
+    }
+
+    .content-block__right {
+        flex: 1 1 100%;
+        padding-left: 0;
+    }
+
+    .card-container.alternate {
+        flex-basis: calc(100% - 24px);
+    }
+
+    .feature-list .content-block-left {
+        margin-right: 40px;
+    }
+
+    .feature-list-image-left-tab {
+        top: 40px;
+        left: 40px;
+    }
+
+    .feature-list .content-block-right {
+        padding-top: 80px;
+    }
+
+    .feature-list__item {
+        gap: 1rem;
+    }
+
+    .feature-list__item-number {
+        font-size: 1.5rem;
+        height: 36px;
+        width: 36px;
+    }
+
+    .card-container {
+        flex-basis: calc(100% - 24px);
+    }
+
+    .calculator-container {
+        padding: 24px;
+        gap: 1rem;
+        font-size: 0.875rem;
+    }
+
+    .calculator__input-box {
+        font-size: 0.875rem;
+    }
+
+    .calculator__donut-chart-container {
+        max-width: 80%;
+    }
+
+    .footer__top {
+        flex-direction: column;
+        padding-bottom: 0;
+        border: none;
+    }
+
+    .footer__top-left {
+        padding: 12px 12px 12px 4px;
+        justify-content: center;
+    }
+
+    .footer__top-right {
+        flex-direction: column;
+        border-top: 1px solid var(--color-white);
+    }
+
+    .footer__accordion-item {
+        width: 100%;
+        border-bottom: 1px solid var(--color-white);
+        padding: 6px 18px;
+        gap: 0;
+    }
+
+    .footer__accordion-content {
+        display: grid;
+        grid-template-rows: 0fr;
+        transition: grid-template-rows 0.5s;
+        transition: 0.5s ease-in-out;
+    }
+
+    .footer__accordion-content.show {
+        grid-template-rows: 1fr;
+        margin: 10px 0;
+        transition: 0.5s ease-in-out;
+    }
+
+    .footer__accordion-chevron {
+        display: block;
+    }
+
+    .footer__accordion-chevron.rotate {
+        transform: rotate(180deg);
+        transition: 0.2s ease-in-out;
+    }
+
+    .footer__icons {
+        margin-top: 40px;
+    }
+
+    .footer__bottom {
+        padding-bottom: 40px;
+    }
+}
