--- a/css/styles.css
+++ b/css/styles.css
@@ -484,6 +484,14 @@ a {
 .content-block__desc {
     font-size: 1.25rem;
     margin: 20px 0 0;
+    display: flex;
+    flex-direction: column;
+    gap: 2rem
+}
+
+.content-block__desc > p {
+    text-align: left;
+    font-size: 1.125rem;
 }
 
 .cards {
@@ -1189,6 +1197,7 @@ a {
     .content-block__desc {
         font-size: 1.25rem;
         margin: 10px 0 0;
+        gap: 1rem;
     }
 
     .cards {
