--- a/css/styles.css
+++ b/css/styles.css
@@ -489,7 +489,7 @@ a {
     gap: 2rem
 }
 
-.content-block__desc > p {
+.content-block__desc>p {
     text-align: left;
     font-size: 1.125rem;
 }
@@ -506,6 +506,8 @@ a {
     display: flex;
     flex-direction: column;
     gap: 10px;
+    height: 100%;
+    ;
 }
 
 .card-container {
@@ -560,6 +562,7 @@ a {
 .teaser__btn {
     display: flex;
     width: fit-content;
+    margin-top: auto;
 }
 
 .card-link-text {
@@ -619,7 +622,7 @@ a {
     margin-top: 30px;
     display: flex;
     flex-direction: column;
-    gap: 20px;
+    gap: 32px;
 }
 
 .feature-list__item {
@@ -1228,6 +1231,10 @@ a {
 
     .card-container.alternate {
         flex-basis: calc(100% - 24px);
+    }
+
+    .feature-list__list {
+        gap: 20px;
     }
 
     .feature-list .content-block-left {
